# gd-extension-starter

./: .gitignore  .gitmodules  CMakeLists.txt  license.txt
extension/: CMakeLists.txt  gdextension.in
extension/src/: RegisterExtension.cpp
